--- a/requirements.txt
+++ b/requirements.txt
@@ -2,191 +2,194 @@ aiohttp==3.8.3
 aiosignal==1.3.1
 alabaster==0.7.12
 altair==4.2.0
-arrow @ file:///C:/b/abs_b4078n3t7m/croot/arrow_1666726878744/work
-astroid @ file:///C:/Windows/TEMP/abs_b0dtxgpicv/croots/recipe/astroid_1659023126745/work
+arrow==1.2.3
+astroid==2.11.7
 async-timeout==4.0.2
 asynctest==0.13.0
 atomicwrites==1.4.0
 attrs==22.2.0
-autopep8 @ file:///opt/conda/conda-bld/autopep8_1650463822033/work
-Babel @ file:///C:/b/abs_a2shv_3tqi/croot/babel_1671782804377/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+autopep8==1.6.0
+Babel==2.11.0
+backcall==0.2.0
 backports.zoneinfo==0.2.1
-bcrypt @ file:///C:/Windows/Temp/abs_36kl66t_aw/croots/recipe/bcrypt_1659554334050/work
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650292996413/work
-binaryornot @ file:///tmp/build/80754af9/binaryornot_1617751525010/work
-black @ file:///C:/ci/black_1660239917055/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
+binaryornot==0.4.4
+black==22.6.0
+bleach==4.1.0
 blinker==1.5
 brotlipy==0.7.0
 cachetools==5.2.1
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
-cffi @ file:///C:/b/abs_49n3v2hyhr/croot/cffi_1670423218144/work
-chardet @ file:///C:/ci/chardet_1607706910910/work
+certifi==2022.12.7
+cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==2.1.1
 click==8.1.3
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1632508026186/work
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
+cloudpickle==2.0.0
+colorama==0.4.6
 commonmark==0.9.1
-cookiecutter @ file:///opt/conda/conda-bld/cookiecutter_1649151442564/work
-cryptography @ file:///C:/b/abs_b7d7drzbky/croot/cryptography_1673298763653/work
-debugpy @ file:///C:/ci/debugpy_1637091911212/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///Users/ktietz/demo/mc3/conda-bld/diff-match-patch_1630511840874/work
-dill @ file:///C:/b/abs_42h_07z1yj/croot/dill_1667919550096/work
+cookiecutter==1.7.3
+cryptography==38.0.4
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20200713
+dill==0.3.6
 docopt==0.6.2
-docutils @ file:///C:/ci/docutils_1620828194019/work
-entrypoints @ file:///C:/ci/entrypoints_1649926659561/work
-fastjsonschema @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_ebruxzvd08/croots/recipe/python-fastjsonschema_1661376484940/work
-flake8 @ file:///opt/conda/conda-bld/flake8_1648129545443/work
-flit_core @ file:///opt/conda/conda-bld/flit-core_1644941570762/work/source/flit_core
+docutils==0.17.1
+entrypoints==0.4
+fastjsonschema==2.16.2
+flake8==4.0.1
+flit_core==3.6.0
 frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.30
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-imagesize @ file:///C:/Windows/TEMP/abs_3cecd249-3fc4-4bfc-b80b-bb227b0d701en12vqzot/croots/recipe/imagesize_1657179501304/work
+idna==3.4
+imagesize==1.4.1
 importlib-metadata==6.0.0
 importlib-resources==5.10.2
 inflection==0.5.1
-intervaltree @ file:///Users/ktietz/demo/mc3/conda-bld/intervaltree_1630511889664/work
-ipykernel @ file:///C:/b/abs_21ykzkm7y_/croots/recipe/ipykernel_1662361803478/work
-ipython @ file:///C:/Windows/TEMP/abs_45b5zb1l7q/croots/recipe/ipython_1659529855872/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-isort @ file:///tmp/build/80754af9/isort_1628603791788/work
-jedi @ file:///C:/ci/jedi_1644297241925/work
-jellyfish @ file:///C:/ci/jellyfish_1647962768748/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-jinja2-time @ file:///opt/conda/conda-bld/jinja2-time_1649251842261/work
+intervaltree==3.1.0
+ipykernel==6.15.2
+ipython==7.31.1
+ipython-genutils==0.2.0
+isort==5.9.3
+jedi==0.18.1
+jellyfish==0.9.0
+Jinja2==3.1.2
+jinja2-time==0.2.0
 joblib==1.2.0
 jsonschema==4.17.3
-jupyter_client @ file:///C:/b/abs_b9pns5mx5p/croot/jupyter_client_1671703062216/work
-jupyter_core @ file:///C:/b/abs_b8r5lb5eus/croot/jupyter_core_1668084445779/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-keyring @ file:///C:/ci/keyring_1638531658822/work
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529290879/work
-lxml @ file:///C:/ci/lxml_1657509249535/work
-MarkupSafe @ file:///C:/ci/markupsafe_1654508076077/work
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934089728/work
-mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
-mistune @ file:///C:/ci/mistune_1594373272338/work
+jupyter_client==7.4.8
+jupyter_core==4.11.2
+jupyterlab-pygments==0.1.2
+keyring==23.4.0
+lazy-object-proxy==1.6.0
+lxml==4.9.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mistune==0.8.4
 multidict==6.0.4
 mypy-extensions==0.4.3
-nbclient @ file:///C:/ci/nbclient_1650308542913/work
-nbconvert @ file:///C:/b/abs_4av3q4okro/croot/nbconvert_1668450658054/work
-nbformat @ file:///C:/b/abs_85_3g7dkt4/croot/nbformat_1670352343720/work
-nest-asyncio @ file:///C:/b/abs_3a_4jsjlqu/croot/nest-asyncio_1672387322800/work
+nbclient==0.5.13
+nbconvert==6.5.4
+nbformat==5.7.0
+nest-asyncio==1.5.6
 numpy==1.21.6
-numpydoc @ file:///C:/b/abs_cfdd4zxbga/croot/numpydoc_1668085912100/work
+numpydoc==1.5.0
 openai==0.26.1
 packaging==23.0
 pandas==1.3.5
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-paramiko @ file:///opt/conda/conda-bld/paramiko_1640109032755/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pathspec @ file:///C:/Windows/TEMP/abs_581d0u45mh/croots/recipe/pathspec_1659627132171/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pandocfilters==1.5.0
+paramiko==2.8.1
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
 pickle5==0.0.12
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pickleshare==0.7.5
 Pillow==9.4.0
+pip==22.3.1
 pipreqs==0.4.11
-pkgutil_resolve_name @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_81wm45v3kb/croots/recipe/pkgutil-resolve-name_1661463352381/work
-platformdirs @ file:///C:/b/abs_73cc5cz_1u/croots/recipe/platformdirs_1662711386458/work
-pluggy @ file:///C:/ci/pluggy_1648042781630/work
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.2
+pluggy==1.0.0
 ply==3.11
-poyo @ file:///tmp/build/80754af9/poyo_1617751526755/work
-prompt-toolkit @ file:///C:/b/abs_6coz5_9f2s/croot/prompt-toolkit_1672387908312/work
+poyo==0.5.0
+prompt-toolkit==3.0.36
 protobuf==3.20.3
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+psutil==5.9.0
+ptyprocess==0.7.0
 pyarrow==10.0.1
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1636635402688/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pycodestyle==2.8.0
+pycparser==2.21
 pydeck==0.8.0
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1621600989141/work
-pyflakes @ file:///tmp/build/80754af9/pyflakes_1636644436481/work
+pydocstyle==6.1.1
+pyflakes==2.4.0
 Pygments==2.14.0
-pylint @ file:///C:/Windows/TEMP/abs_518eqlbmoo/croots/recipe/pylint_1659110354241/work
+pylint==2.14.5
 pyls-spyder==0.4.0
 Pympler==1.0.1
-PyNaCl @ file:///C:/Windows/Temp/abs_d5c3ajcm87/croots/recipe/pynacl_1659620667490/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
 PyQt5==5.15.7
-PyQt5-sip @ file:///C:/Windows/Temp/abs_d7gmd2jg8i/croots/recipe/pyqt-split_1659273064801/work/pyqt_sip
+PyQt5-sip==12.11.0
 PyQtWebEngine==5.15.4
 pyrsistent==0.19.3
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.21.0
-python-lsp-black @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_dddk9lhpp1/croots/recipe/python-lsp-black_1661852041405/work
+python-lsp-black==1.2.1
 python-lsp-jsonrpc==1.0.0
-python-lsp-server @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_d03ou8px8s/croots/recipe/python-lsp-server_1661813818824/work
-python-slugify @ file:///tmp/build/80754af9/python-slugify_1620405669636/work
+python-lsp-server==1.5.0
+python-slugify==5.0.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 pywin32==305.1
-pywin32-ctypes @ file:///C:/ci/pywin32-ctypes_1594392691209/work
+pywin32-ctypes==0.2.0
 PyYAML==6.0
-pyzmq @ file:///C:/ci/pyzmq_1657597757589/work
-QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
-qstylizer @ file:///tmp/build/80754af9/qstylizer_1617713584600/work/dist/qstylizer-0.1.10-py2.py3-none-any.whl
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1637160816833/work
-qtconsole @ file:///C:/ci/qtconsole_1662000803331/work
-QtPy @ file:///C:/ci/qtpy_1662015131946/work
+pyzmq==23.2.0
+QDarkStyle==3.0.2
+qstylizer==0.1.10
+QtAwesome==1.0.3
+qtconsole==5.3.2
+QtPy==2.2.0
 requests==2.28.2
 rich==13.1.0
-rope @ file:///opt/conda/conda-bld/rope_1643788605236/work
-Rtree @ file:///C:/ci/rtree_1618421019532/work
+rope==0.22.0
+Rtree==0.9.7
 scikit-learn==1.0.2
 scipy==1.7.3
 semver==2.13.0
-sip @ file:///C:/Windows/Temp/abs_b8fxd17m2u/croots/recipe/sip_1659012372737/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==65.6.3
+sip==6.6.2
+six==1.16.0
 sklearn==0.0.post1
 smmap==5.0.0
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
-soupsieve @ file:///C:/b/abs_fasraqxhlv/croot/soupsieve_1666296394662/work
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 Sphinx==4.2.0
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
-spyder @ file:///C:/b/abs_8b9xyq0tgd/croots/recipe/spyder_1663056826743/work
-spyder-kernels @ file:///C:/b/abs_bcwwacv768/croots/recipe/spyder-kernels_1662457887005/work
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+spyder==5.3.3
+spyder-kernels==2.3.3
 streamlit==1.17.0
 streamlit-option-menu==0.3.2
-text-unidecode @ file:///Users/ktietz/demo/mc3/conda-bld/text-unidecode_1629401354553/work
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
+text-unidecode==1.3
+textdistance==4.2.1
 threadpoolctl==3.1.0
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tinycss @ file:///tmp/build/80754af9/tinycss_1617713798712/work
-tinycss2 @ file:///C:/b/abs_52w5vfuaax/croot/tinycss2_1668168823131/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli @ file:///C:/Windows/TEMP/abs_ac109f85-a7b3-4b4d-bcfd-52622eceddf0hy332ojo/croots/recipe/tomli_1657175513137/work
-tomlkit @ file:///C:/Windows/TEMP/abs_3296qo9v6b/croots/recipe/tomlkit_1658946894808/work
+three-merge==0.1.1
+tinycss==0.4
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.1
 toolz==0.12.0
-tornado @ file:///C:/ci/tornado_1662476933490/work
+tornado==6.2
 tqdm==4.64.1
-traitlets @ file:///C:/b/abs_e5m_xjjl94/croot/traitlets_1671143896266/work
-typed-ast @ file:///C:/ci/typed-ast_1624953789477/work
-typing_extensions @ file:///C:/b/abs_89eui86zuq/croot/typing_extensions_1669923792806/work
+traitlets==5.7.1
+typed-ast==1.4.3
+typing_extensions==4.4.0
 tzdata==2022.7
 tzlocal==4.2
-ujson @ file:///C:/ci/ujson_1657507700248/work
-Unidecode @ file:///tmp/build/80754af9/unidecode_1614712377438/work
+ujson==5.4.0
+Unidecode==1.2.0
 urllib3==1.26.14
 validators==0.20.0
 watchdog==2.2.1
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.5
 webencodings==0.5.1
-whatthepatch @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_e7bihs8grh/croots/recipe/whatthepatch_1661796085215/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
+whatthepatch==1.0.2
+wheel==0.37.1
+win-inet-pton==1.1.0
 wincertstore==0.2
-wrapt @ file:///C:/Windows/Temp/abs_7c3dd407-1390-477a-b542-fd15df6a24085_diwiza/croots/recipe/wrapt_1657814452175/work
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
+wrapt==1.14.1
+yapf==0.31.0
 yarg==0.1.9
 yarl==1.8.2
-zipp @ file:///C:/b/abs_b9jfdr908q/croot/zipp_1672387552360/work
+zipp==3.11.0
