--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ paramiko==2.8.1
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
-pickle5==0.0.12
+pickle5
 pickleshare==0.7.5
 Pillow==9.4.0
 pip==22.3.1
