--- a/requirements.txt
+++ b/requirements.txt
@@ -125,8 +125,8 @@ python-lsp-server==1.5.0
 python-slugify==5.0.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==305.1
-pywin32-ctypes==0.2.0
+pywin32
+pywin32-ctypes
 PyYAML==6.0
 pyzmq==23.2.0
 QDarkStyle==3.0.2
